# common_concepts

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  SECURITY.md  TODO
cmake/: CMakeLists.txt  common_conceptsConfig.cmake.in
doc/: CMakeLists.txt  DoxygenConfig.conf.in
doc/settings/: header.html
docs/: CMakeLists.txt
include/common_concepts/: comparable_regular.hpp  hashable.hpp
test/: CMakeLists.txt  main.cpp  test_comparable_regular.cpp  test_hashable.cpp
